<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/txtEdad"
        style="@style/txtViewEdad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtApellido"
        style="@style/txtViewApellido"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtNombre"
        style="@style/txtViewNombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="188dp"
        android:layout_height="80dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="232dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbtnMujer"
            style="@style/radioButton"
            android:layout_height="wrap_content"
            android:text="@string/rbtnFemale" />

        <RadioButton
            android:id="@+id/rbtnHombre"
            style="@style/radioButton"
            android:layout_width="255dp"
            android:text="@string/rbtnMale" />

    </RadioGroup>

    <Spinner
        android:id="@+id/listaEstados"
        style="@style/spinner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtGenerado"
        style="@style/txtGenerado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnGenerar"
        style="@style/buttonGenerar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnLimpiar"
        style="@style/buttonLimpiar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switchHijos"
        style="@style/switchHijos"
        android:text="@string/switchHijos"
        android:textOff="@string/switchNo"
        android:textOn="@string/switchSi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>